// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Render select last tab 1`] = `
<div>
  <h1>
    My React App!
  </h1>
  <div>
    <button
      data-test="addTab"
      type="button"
    >
      Add tab
    </button>
  </div>
  <div
    class="react-tabs"
    data-tabs="true"
  >
    <ul
      class="react-tabs__tab-list"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-1"
        aria-disabled="false"
        aria-selected="true"
        class="react-tabs__tab react-tabs__tab--selected"
        data-test="tab"
        id="react-tabs-0"
        role="tab"
        tabindex="0"
      >
        <span>
          Tab header 1
        </span>
      </li>
      <li
        aria-controls="react-tabs-3"
        aria-disabled="false"
        aria-selected="false"
        class="react-tabs__tab"
        data-test="tab"
        id="react-tabs-2"
        role="tab"
      >
        <span>
          Tab header 2
        </span>
      </li>
      <li
        aria-controls="react-tabs-5"
        aria-disabled="false"
        aria-selected="false"
        class="react-tabs__tab"
        data-test="tab"
        id="react-tabs-4"
        role="tab"
      >
        <span>
          Tab header 3
        </span>
      </li>
      <li
        aria-controls="react-tabs-7"
        aria-disabled="false"
        aria-selected="false"
        class="react-tabs__tab"
        data-test="tab"
        id="react-tabs-6"
        role="tab"
      >
        <span>
          Tab header 4
        </span>
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-0"
      class="react-tabs__tab-panel react-tabs__tab-panel--selected"
      data-test="tabContent"
      id="react-tabs-1"
      role="tabpanel"
    >
      <div>
        Tab panel 1 content
        <button
          type="button"
        >
          Remove Tab
        </button>
      </div>
    </div>
    <div
      aria-labelledby="react-tabs-2"
      class="react-tabs__tab-panel"
      data-test="tabContent"
      id="react-tabs-3"
      role="tabpanel"
    />
    <div
      aria-labelledby="react-tabs-4"
      class="react-tabs__tab-panel"
      data-test="tabContent"
      id="react-tabs-5"
      role="tabpanel"
    />
    <div
      aria-labelledby="react-tabs-6"
      class="react-tabs__tab-panel"
      data-test="tabContent"
      id="react-tabs-7"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`Tabs Render select last tab 2`] = `
<div>
  <h1>
    My React App!
  </h1>
  <div>
    <button
      data-test="addTab"
      type="button"
    >
      Add tab
    </button>
  </div>
  <div
    class="react-tabs"
    data-tabs="true"
  >
    <ul
      class="react-tabs__tab-list"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-1"
        aria-disabled="false"
        aria-selected="false"
        class="react-tabs__tab"
        data-test="tab"
        id="react-tabs-0"
        role="tab"
      >
        <span>
          Tab header 1
        </span>
      </li>
      <li
        aria-controls="react-tabs-3"
        aria-disabled="false"
        aria-selected="false"
        class="react-tabs__tab"
        data-test="tab"
        id="react-tabs-2"
        role="tab"
      >
        <span>
          Tab header 2
        </span>
      </li>
      <li
        aria-controls="react-tabs-5"
        aria-disabled="false"
        aria-selected="false"
        class="react-tabs__tab"
        data-test="tab"
        id="react-tabs-4"
        role="tab"
      >
        <span>
          Tab header 3
        </span>
      </li>
      <li
        aria-controls="react-tabs-7"
        aria-disabled="false"
        aria-selected="true"
        class="react-tabs__tab react-tabs__tab--selected"
        data-test="tab"
        id="react-tabs-6"
        role="tab"
        tabindex="0"
      >
        <span>
          Tab header 4
        </span>
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-0"
      class="react-tabs__tab-panel"
      data-test="tabContent"
      id="react-tabs-1"
      role="tabpanel"
    />
    <div
      aria-labelledby="react-tabs-2"
      class="react-tabs__tab-panel"
      data-test="tabContent"
      id="react-tabs-3"
      role="tabpanel"
    />
    <div
      aria-labelledby="react-tabs-4"
      class="react-tabs__tab-panel"
      data-test="tabContent"
      id="react-tabs-5"
      role="tabpanel"
    />
    <div
      aria-labelledby="react-tabs-6"
      class="react-tabs__tab-panel react-tabs__tab-panel--selected"
      data-test="tabContent"
      id="react-tabs-7"
      role="tabpanel"
    >
      <div>
        Tab panel 4 content
        <button
          type="button"
        >
          Remove Tab
        </button>
      </div>
    </div>
  </div>
</div>
`;
